fix mobile menu error and the services-images section on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -422,25 +422,27 @@ em {
 
 .header .menu-btn div {
     display: block;
+    pointer-events: none;
     width: 22px;
     height: 1px;
     background-color: var(--color-black);
     margin: 6px 4px;
 }
 
-.header.transparent.mobile-menu-active .menu-btn div {
+/* .header.transparent.mobile-menu-active .menu-btn div {
     display: block;
     width: 22px;
     height: 1px;
     background-color: var(--color-black);
     margin: 6px 4px;
-}
+} */
 
 .header.transparent .menu-btn div {
     background-color: var(--color-white);
 }
 
 .header .menu-btn {
+    z-index: 1000;
     align-self: center;
     grid-area: menu-button;
     cursor: pointer;
@@ -1635,6 +1637,8 @@ body .services {
     width: 100%;
     background-color: var(--color-white);
     max-width: 100%;
+    /* height: 100%; */
+    /* min-height: 100%; */
 }
 
 .services .services-images .col-1 { 
@@ -1644,14 +1648,24 @@ body .services {
 .services .services-images .col-2 {
     position: relative;
     margin: 1.25em;
+    place-content: center;
 } 
 
 
 .services .services-images .col-2 .img-container {
-    max-width: 20vw;
+    max-width: 40%;
     display: flex;
+    align-content: center;
     margin: 0 auto;
-    padding: 0;
+    /* padding-top: 0;
+    padding-bottom: 0; */
+    /* place-content: center; */
+}
+
+.services .services-images .col-2 .img-container.zoom-in {
+    display: flex;
+    align-content: center;
+    place-items: stretch;
 }
 
 .services .services-images .col-2 .img-container img {
@@ -1661,7 +1675,16 @@ body .services {
     max-height: 100%;
     object-position: 0 50%;
     overflow: hidden;
+    top: 45%;
+    align-items: center;
+    transform: translateY(-45%);
+    -webkit-transform: translateY(-45%);
+    -moz-transform: translateY(-45%);
+    -ms-transform: translateY(-45%);
+    -o-transform: translateY(-45%);
 }
+
+/* @media screen and () */
 
 
 @media screen and (min-width: 1008px){
@@ -1836,9 +1859,9 @@ li.link-list-item + li.link-list-item {
 }
 
 @media screen and (min-width: 768px){
-    .services .services-section {
+    /* .services .services-section {
         min-height: 100%;
-    }
+    } */
 }
 
 
@@ -1898,6 +1921,7 @@ li.link-list-item + li.link-list-item {
         margin: auto;
     }
 }
+
 @media screen and (min-width: 1200px){
 
     
@@ -2221,6 +2245,7 @@ body .contact {
 /* Animations */
 
 .img-container.zoom-in img {
+    /* display: flex; */
     display: block;
     width: 100%;
     height: auto;
@@ -2271,7 +2296,7 @@ body .contact {
 
 .zoom-in {
     position: relative;
-    place-items:center;  
+    place-items: center;  
     overflow: hidden;
     width: 100%;
     height: 100%;
